--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.1.9",
     "nodemon": "^2.0.15"
   }
 }
