--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "tsc",
     "build:client": "cd client && npm run build && cd ..",
-    "dev": "nodemon src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,10 +19,17 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@types/mongoose": "^5.11.97",
+    "@types/mongoose-paginate-v2": "^1.4.3",
+    "add": "^2.0.6",
+    "body-parser": "^1.19.1",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^6.1.9",
-    "nodemon": "^2.0.15"
+    "mongoose-paginate-v2": "^1.5.0",
+    "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8",
+    "yarn": "^1.22.17"
   }
 }
