--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
   },
